Import Poppins, Font-family

--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 body {
   background-color: #ffffff;
   -webkit-transition: 0.5s;
@@ -96,22 +97,19 @@ a {
 header nav {
   font-family: "Poppins", sans-serif;
   padding: 1.5rem 0;
-}
-
-header nav .spacing {
   max-width: 1600px;
   width: 100%;
   margin: 0 auto;
 }
 
-header nav .spacing h1 {
+header nav h1 {
   font-family: "Poppins", "Consolas", sans-serif;
   font-size: 2rem;
   font-weight: normal;
   color: #0c0c0c;
 }
 
-header nav .spacing #mode {
+header nav #mode {
   font-family: "Poppins", sans-serif;
   background-color: transparent;
   color: #0c0c0c;
@@ -120,7 +118,7 @@ header nav .spacing #mode {
   border-radius: 5px;
 }
 
-header nav .spacing ul {
+header nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -130,13 +128,13 @@ header nav .spacing ul {
           justify-content: right;
 }
 
-header nav .spacing ul li {
+header nav ul li {
   font-size: 1.5rem;
   margin: -2.5rem 1rem;
   color: #0c0c0c;
 }
 
-header nav .spacing ul li a {
+header nav ul li a {
   color: #0c0c0c;
 }
 
@@ -267,7 +265,7 @@ footer .boot h1 {
 }
 
 @media screen and (max-width: 2600px) {
-  nav .spacing {
+  nav {
     max-width: 2100px !important;
   }
   .container {
@@ -281,7 +279,7 @@ footer .boot h1 {
 }
 
 @media screen and (max-width: 1940px) {
-  nav .spacing {
+  nav {
     max-width: 1600px !important;
   }
   .container {
@@ -295,7 +293,7 @@ footer .boot h1 {
 }
 
 @media screen and (max-width: 1800px) {
-  nav .spacing {
+  nav {
     max-width: 1500px !important;
   }
   .container {
@@ -309,7 +307,7 @@ footer .boot h1 {
 }
 
 @media screen and (max-width: 1500px) {
-  nav .spacing {
+  nav {
     max-width: 1200px !important;
   }
 }
@@ -317,11 +315,9 @@ footer .boot h1 {
 @media screen and (max-width: 1200px) {
   header nav {
     padding: 0.8rem 0 5rem 0;
-  }
-  header nav .spacing {
     max-width: 750px !important;
   }
-  header nav .spacing ul {
+  header nav ul {
     display: none;
   }
   .container {
@@ -336,11 +332,9 @@ footer .boot h1 {
 @media screen and (max-width: 1024px) {
   header nav {
     padding: 0.8rem 0 5rem 0;
-  }
-  header nav .spacing {
     max-width: 950px !important;
   }
-  header nav .spacing ul {
+  header nav ul {
     display: none;
   }
 }
@@ -348,11 +342,9 @@ footer .boot h1 {
 @media screen and (max-width: 920px) {
   header nav {
     padding: 0.8rem 0 5rem 0;
-  }
-  header nav .spacing {
     max-width: 850px !important;
   }
-  header nav .spacing ul {
+  header nav ul {
     display: none;
   }
   header .about {
@@ -369,11 +361,9 @@ footer .boot h1 {
 @media screen and (max-width: 820px) {
   header nav {
     padding: 0.8rem 0 5rem 0;
-  }
-  header nav .spacing {
     max-width: 750px !important;
   }
-  header nav .spacing ul {
+  header nav ul {
     display: none;
   }
 }
@@ -381,17 +371,15 @@ footer .boot h1 {
 @media screen and (max-width: 770px) {
   header nav {
     padding: 0.8rem 0 5rem 0;
-  }
-  header nav .spacing {
     max-width: 700px !important;
   }
-  header nav .spacing ul {
+  header nav ul {
     display: none;
   }
 }
 
 @media screen and (max-width: 600px) {
-  header nav .spacing h1 {
+  header nav h1 {
     font-size: 2rem;
     margin: 0.7rem 2rem;
   }
