--- a/index.scss
+++ b/index.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); 
+
 body {
   background-color: #ffffff;
   transition: 0.5s;
@@ -98,41 +100,38 @@ header {
   nav {
     font-family: "Poppins", sans-serif;
     padding: 1.5rem 0;
+    max-width: 1600px;
+    width: 100%;
+    margin: 0 auto;
 
-    .spacing {
-      max-width: 1600px;
-      width: 100%;
-      margin: 0 auto;
+    h1 {
+      font-family: "Poppins", "Consolas", sans-serif;
+      font-size: 2rem;
+      font-weight: normal;
+      color: rgb(12, 12, 12);
+    }
 
-      h1 {
-        font-family: "Poppins", "Consolas", sans-serif;
-        font-size: 2rem;
-        font-weight: normal;
+    #mode {
+      font-family: "Poppins", sans-serif;
+      background-color: transparent;
+      color: rgb(12, 12, 12);
+      font-weight: bold;
+      border: none;
+      border-radius: 5px;
+    }
+
+    ul {
+      display: flex;
+      list-style-type: none;
+      justify-content: right;
+
+      li {
+        font-size: 1.5rem;
+        margin: -2.5rem 1rem;
         color: rgb(12, 12, 12);
-      }
 
-      #mode {
-        font-family: "Poppins", sans-serif;
-        background-color: transparent;
-        color: rgb(12, 12, 12);
-        font-weight: bold;
-        border: none;
-        border-radius: 5px;
-      }
-
-      ul {
-        display: flex;
-        list-style-type: none;
-        justify-content: right;
-
-        li {
-          font-size: 1.5rem;
-          margin: -2.5rem 1rem;
+        a {
           color: rgb(12, 12, 12);
-
-          a {
-            color: rgb(12, 12, 12);
-          }
         }
       }
     }
@@ -255,9 +254,7 @@ footer {
 
 @media screen and (max-width: 2600px) {
   nav {
-    .spacing {
-      max-width: 2100px !important;
-    }
+    max-width: 2100px !important;
   }
   .container {
     margin: 10rem 15rem !important;
@@ -272,9 +269,7 @@ footer {
 
 @media screen and (max-width: 1940px) {
   nav {
-    .spacing {
-      max-width: 1600px !important;
-    }
+    max-width: 1600px !important;
   }
   .container {
     margin: 10rem 20rem !important;
@@ -289,9 +284,7 @@ footer {
 
 @media screen and (max-width: 1800px) {
   nav {
-    .spacing {
-      max-width: 1500px !important;
-    }
+    max-width: 1500px !important;
   }
   .container {
     margin: 10rem 15rem !important;
@@ -306,9 +299,7 @@ footer {
 
 @media screen and (max-width: 1500px) {
   nav {
-    .spacing {
-      max-width: 1200px !important;
-    }
+    max-width: 1200px !important;
   }
 }
 
@@ -316,12 +307,10 @@ footer {
   header {
     nav {
       padding: 0.8rem 0 5rem 0;
-      .spacing {
-        max-width: 750px !important;
+      max-width: 750px !important;
 
-        ul {
-          display: none;
-        }
+      ul {
+        display: none;
       }
     }
   }
@@ -340,12 +329,10 @@ footer {
   header {
     nav {
       padding: 0.8rem 0 5rem 0;
-      .spacing {
-        max-width: 950px !important;
+      max-width: 950px !important;
 
-        ul {
-          display: none;
-        }
+      ul {
+        display: none;
       }
     }
   }
@@ -355,12 +342,10 @@ footer {
   header {
     nav {
       padding: 0.8rem 0 5rem 0;
-      .spacing {
-        max-width: 850px !important;
+      max-width: 850px !important;
 
-        ul {
-          display: none;
-        }
+      ul {
+        display: none;
       }
     }
 
@@ -381,12 +366,10 @@ footer {
   header {
     nav {
       padding: 0.8rem 0 5rem 0;
-      .spacing {
-        max-width: 750px !important;
+      max-width: 750px !important;
 
-        ul {
-          display: none;
-        }
+      ul {
+        display: none;
       }
     }
   }
@@ -396,12 +379,10 @@ footer {
   header {
     nav {
       padding: 0.8rem 0 5rem 0;
-      .spacing {
-        max-width: 700px !important;
+      max-width: 700px !important;
 
-        ul {
-          display: none;
-        }
+      ul {
+        display: none;
       }
     }
   }
@@ -410,11 +391,9 @@ footer {
 @media screen and (max-width: 600px) {
   header {
     nav {
-      .spacing {
-        h1 {
-          font-size: 2rem;
-          margin: 0.7rem 2rem;
-        }
+      h1 {
+        font-size: 2rem;
+        margin: 0.7rem 2rem;
       }
     }
     .container {
