--- a/index.css
+++ b/index.css
@@ -174,10 +174,12 @@ header .container .buttons a {
   color: black;
   text-decoration: none;
   margin: 0 0.2rem;
-  padding: 0.5rem 5rem;
+  padding: 0.5rem 1.2rem;
   font-size: 20px;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  text-transform: uppercase;
+  letter-spacing: .7rem;
 }
 
 header .container .buttons a:hover {
@@ -309,6 +311,13 @@ footer .boot h1 {
 @media screen and (max-width: 1500px) {
   nav {
     max-width: 1200px !important;
+  }
+  header .container {
+    margin: 5rem 8rem !important;
+    width: auto !important;
+  }
+  header .container h1 {
+    font-size: 3.8rem !important;
   }
 }
 
