--- a/index.scss
+++ b/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); 
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 body {
   background-color: #ffffff;
@@ -166,9 +166,11 @@ header {
         color: rgb(0, 0, 0);
         text-decoration: none;
         margin: 0 0.2rem;
-        padding: 0.5rem 5rem;
+        padding: 0.5rem 1.2rem;
         font-size: 20px;
         transition: 0.5s;
+        text-transform: uppercase;
+        letter-spacing: .7rem;
       }
 
       a:hover {
@@ -300,6 +302,18 @@ footer {
 @media screen and (max-width: 1500px) {
   nav {
     max-width: 1200px !important;
+  }
+
+  //
+  header {
+    .container {
+      margin: 5rem 8rem !important;
+      width: auto !important;
+
+      h1 {
+        font-size: 3.8rem !important;
+      }
+    }
   }
 }
 
