--- a/index.scss
+++ b/index.scss
@@ -126,7 +126,7 @@ header {
       justify-content: right;
 
       li {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
         margin: -2.5rem 1rem;
         color: rgb(12, 12, 12);
 
@@ -420,8 +420,10 @@ footer {
 
       .buttons {
         a {
+          font-size: 1.1rem;
+          letter-spacing: 0.4rem;
           margin: 1rem 0.3rem !important;
-          padding: 0.2rem 2rem !important;
+          padding: 0.3rem 0.3rem !important;
         }
       }
     }
