--- a/index.css
+++ b/index.css
@@ -403,7 +403,7 @@ footer .boot h1 {
     font-size: 1.1rem;
     letter-spacing: 0.4rem;
     margin: 1rem 0.3rem !important;
-    padding: 0.3rem 0.3rem !important;
+    padding: auto !important;
   }
   header .about h2 {
     font-size: 2rem !important;
