--- a/index.scss
+++ b/index.scss
@@ -423,7 +423,7 @@ footer {
           font-size: 1.1rem;
           letter-spacing: 0.4rem;
           margin: 1rem 0.3rem !important;
-          padding: 0.3rem 0.3rem !important;
+          padding: auto !important;
         }
       }
     }
