--- a/index.scss
+++ b/index.scss
@@ -58,7 +58,7 @@ a {
     }
   }
 
-  .buttons {
+  .btn-container {
     a {
       background-color: transparent !important;
       border: solid 0.1rem rgb(255, 255, 255) !important;
@@ -155,7 +155,7 @@ header {
       }
     }
 
-    .buttons {
+    .btn-container {
       margin: 2rem auto;
       font-family: "Poppins", sans-serif;
       display: flex;
@@ -418,7 +418,7 @@ footer {
         width: auto !important;
       }
 
-      .buttons {
+      .btn-container {
         a {
           font-size: 1.1rem;
           letter-spacing: 0.4rem;
