--- a/index.css
+++ b/index.css
@@ -33,6 +33,17 @@ a {
   transition: 0.5s;
 }
 
+.mobile {
+  float: right;
+  margin: 1.3rem 2rem;
+  max-width: 50px;
+}
+
+.mobile ion-icon {
+  color: transparent;
+  font-size: 4rem;
+}
+
 .dark {
   background-color: #0c0c0c !important;
 }
@@ -179,7 +190,7 @@ header .container .btn-container a {
   -webkit-transition: 0.5s;
   transition: 0.5s;
   text-transform: uppercase;
-  letter-spacing: .7rem;
+  letter-spacing: 0.7rem;
 }
 
 header .container .btn-container a:hover {
@@ -216,7 +227,7 @@ header .container .about .margin h2 {
 
 header .container .about .margin h2 i {
   float: right;
-  margin: 0 .5rem;
+  margin: 0 0.5rem;
 }
 
 header .container .about .margin h2 div {
@@ -245,9 +256,9 @@ header .container .about .margin .overlay {
   display: inline-flex;
   background-color: #131313;
   padding: 1rem;
-  margin: 0 .4rem;
+  margin: 0 0.4rem;
   height: 80px;
-  border: solid .1rem white;
+  border: solid 0.1rem white;
 }
 
 section {
@@ -342,9 +353,6 @@ footer .boot h1 {
     padding: 0.8rem 0 5rem 0;
     max-width: 750px !important;
   }
-  header nav ul {
-    display: none;
-  }
   .container {
     margin: 3rem 2rem !important;
   }
@@ -359,18 +367,12 @@ footer .boot h1 {
     padding: 0.8rem 0 5rem 0;
     max-width: 950px !important;
   }
-  header nav ul {
-    display: none;
-  }
 }
 
 @media screen and (max-width: 920px) {
   header nav {
     padding: 0.8rem 0 5rem 0;
     max-width: 850px !important;
-  }
-  header nav ul {
-    display: none;
   }
   header .about {
     margin: 15rem -3rem !important;
@@ -384,6 +386,9 @@ footer .boot h1 {
 }
 
 @media screen and (max-width: 820px) {
+  .mobile ion-icon {
+    color: white !important;
+  }
   header nav {
     padding: 0.8rem 0 5rem 0;
     max-width: 750px !important;
@@ -397,9 +402,6 @@ footer .boot h1 {
   header nav {
     padding: 0.8rem 0 5rem 0;
     max-width: 700px !important;
-  }
-  header nav ul {
-    display: none;
   }
 }
 
