--- a/index.scss
+++ b/index.scss
@@ -32,6 +32,17 @@ a {
   transition: 0.5s;
 }
 
+.mobile {
+  float: right;
+  margin: 1.3rem 2rem;
+  max-width: 50px;
+
+  ion-icon {
+    color: transparent;
+    font-size: 4rem;
+  }
+}
+
 .dark {
   background-color: rgb(12, 12, 12) !important;
 
@@ -170,7 +181,7 @@ header {
         font-size: 20px;
         transition: 0.5s;
         text-transform: uppercase;
-        letter-spacing: .7rem;
+        letter-spacing: 0.7rem;
       }
 
       a:hover {
@@ -201,7 +212,7 @@ header {
 
           i {
             float: right;
-            margin: 0 .5rem;
+            margin: 0 0.5rem;
           }
 
           div {
@@ -227,11 +238,10 @@ header {
           display: inline-flex;
           background-color: #131313;
           padding: 1rem;
-          margin: 0 .4rem;
+          margin: 0 0.4rem;
           height: 80px;
-          border: solid .1rem white;
+          border: solid 0.1rem white;
           img {
-            
           }
         }
       }
@@ -339,10 +349,6 @@ footer {
     nav {
       padding: 0.8rem 0 5rem 0;
       max-width: 750px !important;
-
-      ul {
-        display: none;
-      }
     }
   }
 
@@ -361,10 +367,6 @@ footer {
     nav {
       padding: 0.8rem 0 5rem 0;
       max-width: 950px !important;
-
-      ul {
-        display: none;
-      }
     }
   }
 }
@@ -374,10 +376,6 @@ footer {
     nav {
       padding: 0.8rem 0 5rem 0;
       max-width: 850px !important;
-
-      ul {
-        display: none;
-      }
     }
 
     .about {
@@ -394,6 +392,11 @@ footer {
 }
 
 @media screen and (max-width: 820px) {
+  .mobile {
+    ion-icon {
+      color: white !important;
+    }
+  }
   header {
     nav {
       padding: 0.8rem 0 5rem 0;
@@ -411,10 +414,6 @@ footer {
     nav {
       padding: 0.8rem 0 5rem 0;
       max-width: 700px !important;
-
-      ul {
-        display: none;
-      }
     }
   }
 }
