--- a/index.css
+++ b/index.css
@@ -379,6 +379,11 @@ footer .boot h1 {
     -webkit-transition: 0.5s;
     transition: 0.5s;
   }
+  header .about h2 {
+    width: 90vw;
+    border-bottom: solid 0.1rem;
+    font-size: 1.8rem !important;
+  }
   header .about p {
     width: 80vw;
     padding: 1rem !important;
@@ -395,6 +400,11 @@ footer .boot h1 {
   }
   header nav ul {
     display: none;
+  }
+  header .about h2 {
+    width: 90vw;
+    border-bottom: solid 0.1rem;
+    font-size: 1.8rem !important;
   }
 }
 
@@ -422,9 +432,6 @@ footer .boot h1 {
     letter-spacing: 0.4rem;
     margin: 1rem 0.3rem !important;
     padding: auto !important;
-  }
-  header .about h2 {
-    font-size: 2rem !important;
   }
   header .about div {
     margin: -1rem auto !important;
