--- a/index.scss
+++ b/index.scss
@@ -382,6 +382,12 @@ footer {
       margin: 15rem -3rem !important;
       transition: 0.5s;
 
+      h2 {
+        width: 90vw;
+        border-bottom: solid 0.1rem;
+        font-size: 1.8rem !important;
+      }
+
       p {
         width: 80vw;
 
@@ -404,6 +410,14 @@ footer {
 
       ul {
         display: none;
+      }
+    }
+
+    .about {
+      h2 {
+        width: 90vw;
+        border-bottom: solid 0.1rem;
+        font-size: 1.8rem !important;
       }
     }
   }
@@ -446,7 +460,6 @@ footer {
 
     .about {
       h2 {
-        font-size: 2rem !important;
       }
 
       div {
