--- a/index.scss
+++ b/index.scss
@@ -244,7 +244,7 @@ section {
       width: 100%;
 
       .wrapper {
-        margin: 3rem 0;
+        margin: 4rem 0;
         max-width: 1500px;
         background-color: #131313;
         padding: 1rem;
@@ -252,6 +252,7 @@ section {
         .content {
           float: left;
           width: 50%;
+          height: 300px;
           h1 {
             padding: 0.1rem;
             font-size: 3rem !important;
@@ -261,6 +262,26 @@ section {
           p {
             padding: 0.1rem;
             color: rgb(204, 204, 204);
+          }
+
+          .btn-container {
+            display: inline-flex;
+            a {
+              color: white;
+              border: solid 0.1rem rgb(255, 255, 255);
+              margin: 1.5rem 0.2rem;
+              padding: 0.3rem 0.7rem;
+              font-size: 20px;
+              text-transform: uppercase;
+              letter-spacing: 0.7rem;
+              transition: 0.5s;
+            }
+
+            a:hover {
+              background-color: rgb(255, 255, 255) !important;
+              color: rgb(0, 0, 0) !important;
+              transition: opacity 0.3s, border 0.3s;
+            }
           }
         }
 
