--- a/index.scss
+++ b/index.scss
@@ -246,7 +246,7 @@ section {
       .wrapper {
         margin: 4rem 0;
         max-width: 1500px;
-        background-color: #131313;
+        border: solid .1rem white;
         padding: 1rem;
         float: left;
         .content {
